--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -168,9 +168,8 @@
   border-radius: 5px;
   background-color: #263a29;
   color: #f2e3db;
+  cursor: pointer;
 }
-
-
 
 /*fecha*/
 /* .fc-header-toolbar {
