--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -141,11 +141,21 @@
   padding: 10px 15px;
 }
 
-.eventodiv {
+.onclikdiv {
   position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
+width: 100%;
+height: 100%;
+}
+
+
+.eventodiv {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
 }
 
 .eventodiv span {
@@ -159,17 +169,20 @@
   font-weight: bold;
 }
 
+/*
 .eventodiv button {
-  position: absolute; /* Cambiar a posición absoluta */
-  right: 0; /* Alinear a la derecha */
-  top: 0; /* Alinear a la parte superior */
+  position: absolute; 
+  right: 0; 
+  top: 0; 
   width: 20vw;
-  height: 140%; /* Hacer que ocupe todo el alto del div */
+  height: 140%; 
   border-radius: 5px;
   background-color: #263a29;
   color: #f2e3db;
   cursor: pointer;
-}
+}*/
+
+
 
 /*fecha*/
 /* .fc-header-toolbar {
