--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -149,15 +149,18 @@
   z-index: 1;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   width: 100%;
   height: 100%;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .eventodiv {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: row;
 }
 
 .eventodiv span {
